revenueassurance/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: revenueassurance-api
  namespace: revenueassurance
spec:
  ports:
    - protocol: TCP
      port: 35000
      targetPort: 35000
  type: ClusterIP
  selector:
    app: revenueassurance-api
